// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for 's submitEvent destination action: all fields 1`] = `
Object {
  "data": "Test Event",
  "kind": "Track",
  "leadRefs": Array [
    Object {
      "type": "client-id",
      "value": "user1234",
    },
    Object {
      "type": "client-id",
      "value": "anonId1234",
    },
  ],
  "timestamp": 1671370444001,
  "type": "tracking",
  "url": "https://segment.com/academy/",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "values": Object {
    "anonymousId": "GOiMP04lKeABeAI4",
    "contextReferrerUrl": "GOiMP04lKeABeAI4",
    "contextUrl": "GOiMP04lKeABeAI4",
    "email": "iwdezle@wadgop.lu",
    "eventName": "GOiMP04lKeABeAI4",
    "referrerUrl": "GOiMP04lKeABeAI4",
    "screenName": "GOiMP04lKeABeAI4",
    "timestamp": "2021-02-01T00:00:00.000Z",
    "type": "GOiMP04lKeABeAI4",
    "url": "GOiMP04lKeABeAI4",
    "userAgent": "GOiMP04lKeABeAI4",
    "userId": "GOiMP04lKeABeAI4",
  },
}
`;

exports[`Testing snapshot for 's submitEvent destination action: required fields 1`] = `
Object {
  "data": "Test Event",
  "kind": "Track",
  "leadRefs": Array [
    Object {
      "type": "client-id",
      "value": "user1234",
    },
    Object {
      "type": "client-id",
      "value": "anonId1234",
    },
  ],
  "timestamp": 1671370443981,
  "type": "tracking",
  "url": "https://segment.com/academy/",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "values": Object {},
}
`;
